--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: calc(100% - 70px);
+  height: 100%;
   max-width: 1280px;
   margin: 0 auto;
 }
